solved endless scrolling overflow

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 #image-track{
     display: flex;
-    gap: 4vmin;
+    gap: 5vmin;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -31,7 +31,8 @@ body:hover >#trailer{
     width: 20px;
     background-color: white;
     border-radius: 20px;
-    
+    cursor: none;
+
     position: fixed;
     top: 0px;
     left: 0px;
@@ -41,3 +42,15 @@ body:hover >#trailer{
     opacity: 0;
     transition: opacity 500ms ease;
 }
+#trailer:not([data-type=""])> #trailer-icon{
+    opacity: 1;
+}
+
+#trailer-icon{
+    z-index: 10000;
+    font-size: 6px;
+    line-height: 4px;
+    opacity: 0;
+    transition: opacity 400ms ease;
+}
+
